[gd_scene load_steps=17 format=3 uid="uid://dy8lh8y52680p"]

[ext_resource type="Script" uid="uid://csetjcqkry6nh" path="res://map/map_container.gd" id="1_5foj2"]
[ext_resource type="Script" uid="uid://si2jegr42s5w" path="res://map/map_renderer.gd" id="2_v1tro"]
[ext_resource type="Script" uid="uid://b21e8hyb3q370" path="res://map/context_menu_builders/add_host_station_context_menu.gd" id="3_5rxkp"]
[ext_resource type="FontFile" uid="uid://b5bou0wtu243w" path="res://resources/Xolonium-Regular.ttf" id="3_6n7wx"]
[ext_resource type="Script" uid="uid://bvysk7snympmh" path="res://map/input_handler.gd" id="3_ayu2m"]
[ext_resource type="Script" uid="uid://dy7vje1yqrysx" path="res://map/context_menu_builders/add_squad_context_menu.gd" id="4_k643x"]
[ext_resource type="Script" uid="uid://cwsiswtwl7rel" path="res://map/context_menu_builders/change_faction_context_menu.gd" id="5_r6vs5"]
[ext_resource type="Script" uid="uid://cd0rvkj0yfjmj" path="res://map/context_menu_builders/change_height_context_menu.gd" id="6_ixe4a"]
[ext_resource type="Script" uid="uid://dqvosr0ewobdx" path="res://map/context_menu_builders/add_building_context_menu.gd" id="7_wljrt"]
[ext_resource type="Script" uid="uid://b4kgjmos3twog" path="res://map/context_menu_builders/add_special_building_context_menu.gd" id="8_g5uc3"]
[ext_resource type="Script" uid="uid://cwyy3rwuya8tu" path="res://map/context_menu_builders/add_item_context_menu.gd" id="9_t3ijr"]
[ext_resource type="Script" uid="uid://ck0j36d27mt7a" path="res://map/context_menu_builders/clean_sector_context_menu.gd" id="10_g5mjj"]
[ext_resource type="Script" uid="uid://vvvjbm7cgufk" path="res://map/context_menu_builders/remove_unit_context_menu.gd" id="11_3ytp4"]
[ext_resource type="Script" uid="uid://cpsje4ux1ciwm" path="res://map/context_menu_builders/copy_sector_context_menu.gd" id="11_ngkm6"]
[ext_resource type="Script" uid="uid://be4jnxwd4j0k3" path="res://map/context_menu_builders/paste_sector_context_menu.gd" id="12_331mg"]
[ext_resource type="Script" uid="uid://dehn6gm7x063i" path="res://map/context_menu_builders/duplicate_unit.gd" id="14_xa2rc"]

[node name="MapContainer" type="ScrollContainer"]
script = ExtResource("1_5foj2")

[node name="SubViewportMapContainer" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportMapContainer"]
disable_3d = true
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="Map" type="Node2D" parent="SubViewportMapContainer/SubViewport"]
unique_name_in_owner = true
script = ExtResource("2_v1tro")

[node name="InputHandler" type="Node" parent="SubViewportMapContainer/SubViewport/Map"]
script = ExtResource("3_ayu2m")

[node name="Camera2D" type="Camera2D" parent="SubViewportMapContainer/SubViewport/Map"]
anchor_mode = 0
zoom = Vector2(0.056, 0.056)

[node name="HostStations" type="Node2D" parent="SubViewportMapContainer/SubViewport/Map"]

[node name="Squads" type="Node2D" parent="SubViewportMapContainer/SubViewport/Map"]

[node name="MapContextMenu" type="PopupMenu" parent="SubViewportMapContainer/SubViewport"]
unique_name_in_owner = true
auto_translate_mode = 1
theme_override_fonts/font = ExtResource("3_6n7wx")
submenu_popup_delay = 0.01

[node name="AddHostStation" type="Node" parent="SubViewportMapContainer/SubViewport/MapContextMenu"]
script = ExtResource("3_5rxkp")

[node name="AddSquad" type="Node" parent="SubViewportMapContainer/SubViewport/MapContextMenu"]
script = ExtResource("4_k643x")

[node name="ChangeFaction" type="Node" parent="SubViewportMapContainer/SubViewport/MapContextMenu"]
script = ExtResource("5_r6vs5")

[node name="ChangeHeight" type="Node" parent="SubViewportMapContainer/SubViewport/MapContextMenu"]
script = ExtResource("6_ixe4a")

[node name="AddBuilding" type="Node" parent="SubViewportMapContainer/SubViewport/MapContextMenu"]
script = ExtResource("7_wljrt")

[node name="AddSpecialBuilding" type="Node" parent="SubViewportMapContainer/SubViewport/MapContextMenu"]
script = ExtResource("8_g5uc3")

[node name="AddItem" type="Node" parent="SubViewportMapContainer/SubViewport/MapContextMenu"]
script = ExtResource("9_t3ijr")

[node name="CleanSector" type="Node" parent="SubViewportMapContainer/SubViewport/MapContextMenu"]
script = ExtResource("10_g5mjj")

[node name="CopySector" type="Node" parent="SubViewportMapContainer/SubViewport/MapContextMenu"]
script = ExtResource("11_ngkm6")

[node name="PasteSector" type="Node" parent="SubViewportMapContainer/SubViewport/MapContextMenu"]
script = ExtResource("12_331mg")

[node name="UnitContextMenu" type="PopupMenu" parent="SubViewportMapContainer/SubViewport"]
unique_name_in_owner = true
auto_translate_mode = 1
size = Vector2i(100, 20)
theme_override_fonts/font = ExtResource("3_6n7wx")
submenu_popup_delay = 0.01

[node name="DuplicateUnit" type="Node" parent="SubViewportMapContainer/SubViewport/UnitContextMenu"]
script = ExtResource("14_xa2rc")

[node name="RemoveUnit" type="Node" parent="SubViewportMapContainer/SubViewport/UnitContextMenu"]
script = ExtResource("11_3ytp4")

[node name="MultiSectorMapContextMenu" type="PopupMenu" parent="SubViewportMapContainer/SubViewport"]
unique_name_in_owner = true
auto_translate_mode = 1
theme_override_fonts/font = ExtResource("3_6n7wx")
submenu_popup_delay = 0.01

[node name="ChangeFaction" type="Node" parent="SubViewportMapContainer/SubViewport/MultiSectorMapContextMenu"]
script = ExtResource("5_r6vs5")

[node name="ChangeHeight" type="Node" parent="SubViewportMapContainer/SubViewport/MultiSectorMapContextMenu"]
script = ExtResource("6_ixe4a")

[node name="AddBuilding" type="Node" parent="SubViewportMapContainer/SubViewport/MultiSectorMapContextMenu"]
script = ExtResource("7_wljrt")

[node name="AddSpecialBuilding" type="Node" parent="SubViewportMapContainer/SubViewport/MultiSectorMapContextMenu"]
script = ExtResource("8_g5uc3")

[node name="CleanSector" type="Node" parent="SubViewportMapContainer/SubViewport/MultiSectorMapContextMenu"]
script = ExtResource("10_g5mjj")
